--- a/styles.scss
+++ b/styles.scss
@@ -1,3 +1,4 @@
 @import './styles/base.scss';
-@import './styles/fonts.scss';
 @import './styles/config.scss';
+@import './styles/fonts.scss';
+@import './styles/reset.scss';
