--- a/styles.scss
+++ b/styles.scss
@@ -1,4 +1,9 @@
-@import './styles/base.scss';
-@import './styles/config.scss';
-@import './styles/fonts.scss';
-@import './styles/reset.scss';
+@import './styles/animation';
+@import './styles/base';
+@import './styles/button';
+@import './styles/config';
+@import './styles/fonts';
+@import './styles/footer';
+@import './styles/header';
+@import './styles/nav';
+@import './styles/reset';
