--- a/styles.scss
+++ b/styles.scss
@@ -1,5 +1,6 @@
 @import './styles/animation';
 @import './styles/base';
+@import './styles/boxes';
 @import './styles/button';
 @import './styles/config';
 @import './styles/fonts';
