--- a/styles/animation.scss
+++ b/styles/animation.scss
@@ -1,17 +1,13 @@
-  /* Fade in animation */
-  
-  @keyframes fade-in {
-    from {
-      opacity: 0;
-      
-    }
-    to {
-      opacity: 1;
-    }
+/* _animation.scss */
+@keyframes fade-in {
+  from {
+    opacity: 0;
   }
-  
-  .header,
-  .main {
-    animation: var(--transition-time-long) var(--transition-timing-function) fade-in;
+  to {
+    opacity: 1;
   }
-  
+}
+
+.header, .main {
+  animation: var(--transition-time-long) var(--transition-timing-function) fade-in;
+}
