--- a/styles/fonts.scss
+++ b/styles/fonts.scss
@@ -1,16 +1,14 @@
-/* Leturgerðir */
+/* _fonts.scss */
+@font-face {
+  font-family: 'Lora';
+  font-style: normal;
+  font-display: swap;
+  src: url(./fonts/Lora-VariableFont_wght.ttf) format('woff');
+}
 
 @font-face {
-    font-family: 'Lora';
-    font-style: normal;
-    font-display: swap;
-    src: url(./fonts/Lora-VariableFont_wght.ttf) format('woff');
-  }
-  
-  @font-face {
-    font-family: 'Noto Sans Display';
-    font-style: normal;
-    font-display: swap;
-    src: url(./fonts/NotoSansDisplay-VariableFont.ttf) format('woff');
-  }
-  
+  font-family: 'Noto Sans Display';
+  font-style: normal;
+  font-display: swap;
+  src: url(./fonts/NotoSansDisplay-VariableFont.ttf) format('woff');
+}
