--- a/styles/reset.scss
+++ b/styles/reset.scss
@@ -1,15 +1,15 @@
-/* Reset og border-box á allt */
+/* _reset.scss */
 * {
-    margin: 0;
-    padding: 0;
-  }
-  
-  html {
-    box-sizing: border-box;
-  }
-  
-  *,
-  *:before,
-  *:after {
-    box-sizing: inherit;
-  }
+  margin: 0;
+  padding: 0;
+}
+
+html {
+  box-sizing: border-box;
+}
+
+*,
+*:before,
+*:after {
+  box-sizing: inherit;
+}
