--- a/styles.scss
+++ b/styles.scss
@@ -1,10 +1,13 @@
-@import './styles/animation';
-@import './styles/base';
-@import './styles/boxes';
-@import './styles/button';
-@import './styles/config';
+@import './styles/reset';
 @import './styles/fonts';
-@import './styles/footer';
+@import './styles/config';
+@import './styles/base';
 @import './styles/header';
 @import './styles/nav';
-@import './styles/reset';
+@import './styles/main';
+@import './styles/footer';
+@import './styles/animation';
+@import './styles/table';
+@import './styles/form';
+@import './styles/button';
+@import './styles/boxes';
