--- a/styles/animation.scss
+++ b/styles/animation.scss
@@ -1,13 +1,15 @@
-/* _animation.scss */
 @keyframes fade-in {
   from {
     opacity: 0;
+    
   }
   to {
     opacity: 1;
   }
 }
 
-.header, .main {
+.header,
+.main {
   animation: var(--transition-time-long) var(--transition-timing-function) fade-in;
 }
+
