--- a/styles/table.scss
+++ b/styles/table.scss
@@ -1,16 +1,16 @@
-/* _table.scss */
+/* Matseðill */
+
 table {
-    border-spacing: 0;
-  
-    th,
-    td {
-      padding: calc(var(--spacing) * 0.5);
-      text-align: left;
-    }
-  
-    tbody tr:nth-child(2n + 1) {
-      color: var(--color-dark);
-      background-color: var(--color-gold);
-    }
-  }
-  
+  border-spacing: 0;
+}
+
+table th,
+table td {
+  padding: calc(var(--spacing) * 0.5);
+  text-align: left;
+}
+
+table tbody tr:nth-child(2n + 1) {
+  color: var(--color-dark);
+  background-color: var(--color-gold);
+}
