--- a/styles.css
+++ b/styles.css
@@ -98,6 +98,56 @@ img {
   width: 1px;
 }
 
+dt {
+  font-weight: bold;
+}
+
+dd {
+  margin-bottom: var(--spacing);
+}
+
+/* Takki */
+.button {
+  display: inline-block;
+  border: 1px solid var(--color-dark);
+  border-radius: var(--border-radius);
+  padding: calc(var(--spacing) / 2) calc(var(--spacing));
+  font-family: var(--font-family-base);
+  text-decoration: none;
+  text-align: center;
+  color: var(--color-light);
+  background-color: var(--color-dark);
+  transition: background-color var(--transition-time-short) var(--transition-timing-function), color var(--transition-time-short);
+}
+
+.button:hover {
+  color: var(--color-dark);
+  background-color: var(--color-gold);
+}
+
+@keyframes fade-in {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+.header,
+.main {
+  animation: var(--transition-time-long) var(--transition-timing-function) fade-in;
+}
+
+/* Layout */
+.wrapper {
+  display: grid;
+  grid-template-rows: auto;
+  grid-template-columns: 100%;
+  /* grid items eru miðjuð */
+  justify-items: center;
+  gap: var(--vertical-space);
+}
+
 .header {
   display: flex;
   flex-direction: column;
@@ -182,89 +232,6 @@ img {
   list-style: none;
 }
 
-@keyframes fade-in {
-  from {
-    opacity: 0;
-  }
-  to {
-    opacity: 1;
-  }
-}
-.header,
-.main {
-  animation: var(--transition-time-long) var(--transition-timing-function) fade-in;
-}
-
-/* Matseðill */
-table {
-  border-spacing: 0;
-}
-
-table th,
-table td {
-  padding: calc(var(--spacing) * 0.5);
-  text-align: left;
-}
-
-table tbody tr:nth-child(2n+1) {
-  color: var(--color-dark);
-  background-color: var(--color-gold);
-}
-
-/* Pöntunarform */
-fieldset {
-  border: var(--border-small) solid var(--color-dark);
-}
-
-fieldset legend {
-  font-weight: bold;
-}
-
-fieldset div label {
-  display: flex;
-  flex-direction: column;
-}
-
-fieldset input,
-fieldset select,
-fieldset textarea {
-  padding: calc(var(--spacing) * 0.5);
-  width: 100%;
-}
-
-fieldset input[type=checkbox] {
-  width: auto;
-}
-
-fieldset .checkbox label {
-  flex-direction: row;
-  gap: calc(var(--spacing) * 0.5);
-}
-
-form button {
-  padding: calc(var(--spacing) * 0.25);
-  border-radius: var(--border-radius);
-}
-
-/* Takki */
-.button {
-  display: inline-block;
-  border: 1px solid var(--color-dark);
-  border-radius: var(--border-radius);
-  padding: calc(var(--spacing) / 2) calc(var(--spacing));
-  font-family: var(--font-family-base);
-  text-decoration: none;
-  text-align: center;
-  color: var(--color-light);
-  background-color: var(--color-dark);
-  transition: background-color var(--transition-time-short) var(--transition-timing-function), color var(--transition-time-short);
-}
-
-.button:hover {
-  color: var(--color-dark);
-  background-color: var(--color-gold);
-}
-
 /* Box! */
 .boxes {
   display: grid;
@@ -322,6 +289,56 @@ form button {
   .boxes .box img {
     max-height: 350px;
   }
+}
+/* Matseðill */
+table {
+  border-spacing: 0;
+}
+
+table th,
+table td {
+  padding: calc(var(--spacing) * 0.5);
+  text-align: left;
+}
+
+table tbody tr:nth-child(2n+1) {
+  color: var(--color-dark);
+  background-color: var(--color-gold);
+}
+
+/* Pöntunarform */
+fieldset {
+  border: var(--border-small) solid var(--color-dark);
+}
+
+fieldset legend {
+  font-weight: bold;
+}
+
+fieldset div label {
+  display: flex;
+  flex-direction: column;
+}
+
+fieldset input,
+fieldset select,
+fieldset textarea {
+  padding: calc(var(--spacing) * 0.5);
+  width: 100%;
+}
+
+fieldset input[type=checkbox] {
+  width: auto;
+}
+
+fieldset .checkbox label {
+  flex-direction: row;
+  gap: calc(var(--spacing) * 0.5);
+}
+
+form button {
+  padding: calc(var(--spacing) * 0.25);
+  border-radius: var(--border-radius);
 }
 
 /*# sourceMappingURL=styles.css.map */
