--- a/styles.scss
+++ b/styles.scss
@@ -2,12 +2,14 @@
 @import './styles/fonts';
 @import './styles/config';
 @import './styles/base';
+@import './styles/button';
+@import './styles/animation';
+@import './styles/layout';
 @import './styles/header';
 @import './styles/nav';
 @import './styles/main';
 @import './styles/footer';
-@import './styles/animation';
+@import './styles/boxes';
 @import './styles/table';
 @import './styles/form';
-@import './styles/button';
-@import './styles/boxes';
+
