--- a/styles.css
+++ b/styles.css
@@ -160,7 +160,7 @@ dd {
   color: var(--color-gold-light);
 }
 
-.header header {
+.header {
   display: flex;
   flex-direction: column;
   align-items: center;
