--- a/styles/header.scss
+++ b/styles/header.scss
@@ -12,7 +12,7 @@
   color: var(--color-gold-light);
 }
 
-.header header {
+.header {
   display: flex;
   flex-direction: column;
   align-items: center;
